Closed Bug 1678488 Opened 5 years ago Closed 5 years ago

Firefox shows skeleton UI indefinitely when "Choose User Profile" dialog is shown on startup

Categories

(Toolkit :: Startup and Profile System, defect)

defect

Tracking

()

RESOLVED FIXED
86 Branch
Tracking Status
firefox85 --- wontfix
firefox86 --- fixed

People

(Reporter: yoasif, Assigned: alexical)

References

(Blocks 1 open bug)

Details

(Keywords: nightly-community, Whiteboard: [skeleton-ui-experiment-blocker])

Attachments

(1 file)

Steps to reproduce:

  1. Have at least two profiles
  2. Open Firefox using firefox -P
  3. Uncheck "Use the selected profile without asking at startup"
  4. Click the "Exit" button
  5. Start Firefox normally (start menu entry)

What happens:

The skeleton UI appears along with the profile chooser. If the profile chooser is in the background, it looks as if Firefox is loading forever, until user selects a profile to start.

Expected result:

Firefox should not show a skeleton UI - it should show just the profile chooser, if "Use the selected profile without asking at startup" is not checked.

Blocks: 1665451
Has STR: --- → yes

:yoasif, if you think that's a regression, then could you try to find a regression range in using for example mozregression?

Doug, I saw that you filed bug, which is about the skeleton UI -- would you mind triaging/assigning priority to this, please?

Flags: needinfo?(dothayer)
Severity: -- → S3
Flags: needinfo?(dothayer)
Priority: -- → P3
Whiteboard: [skeleton-ui-experiment-blocker]

So this is an ugly solution, but it was the best I could come up with. We do
not want to show the skeleton UI if we're going to show the profile manager,
and we will show the profile manager if StartWithLastProfile=0 is under
[General] in profiles.ini. Accordingly the only ways to do the correct thing
here are to try to mirror edits that firefox makes to the profiles.ini file
to the registry, or to simply read the profiles.ini file ourselves. There are
many ways that profiles.ini could get out of sync with the registry if we
tried to mirror its state there, so going straight to the source of truth
seemed the best option.

There is one case which is still not covered here: if there is no profile for
our install marked as Default=1, then we will show the profile manager. This
should only be possible if the user manually edits their profiles.ini file,
however, and then it should resolve itself after one run, so I don't consider
it a significant enough problem to jump through all the hoops we would need
to jump through to solve it.

Depends on D98525

Assignee: nobody → dothayer
Status: NEW → ASSIGNED

Bugbug thinks this bug should belong to this component, but please revert this change in case of error.

Component: General → Startup and Profile System
Product: Firefox → Toolkit

The product::component has been changed since the backlog priority was decided, so we're resetting it.
For more information, please visit auto_nag documentation.

Priority: P3 → --
Pushed by dothayer@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/3d1a1c7c851a Only show skeleton UI if autoselecting profile r=mossop
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 86 Branch

The patch landed in nightly and beta is affected.
:dthayer, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(dothayer)
Flags: needinfo?(dothayer)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: